--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -30,11 +30,14 @@
         "title": "Kontakt",
         "headline": "Haben Sie ein Problem zu lösen?",
         "text": "Kontaktieren Sie mich über dieses Formular. Ich bin daran interessiert, von Ihnen zu hören, Ihre Ideen zu kennen und mit meiner Arbeit zu Ihren Projekten beizutragen.",
-        "contactMe": "Brauchen Sie einen Software Entwickler?Kontaktieren Sie mich!",
+        "contactMe1": "Brauchen Sie einen Web Entwickler?",
+        "contactMe2": "Kontaktieren Sie mich!",
         "name": "Ihr Name",
         "email": "Ihre E-Mail",
         "message": "Ihre Nachricht",
-        "privacyPolicy": "Ich habe die Datenschutzbestimmungen gelesen und stimme der Verarbeitung meiner Daten wie beschrieben zu.",
+        "privacyPolicy": "Ich habe die",
+        "privacyPolicy2": "gelesen und stimme der Verarbeitung meiner Daten wie beschrieben zu.",
+        "privacyPolicy3": "Datenschutzbestimmungen",
         "button": "Hallo sagen :)",
         "error-name": "Ihr Name ist erforderlich",
         "error-email": "Ihre E-Mail ist erforderlich",
