--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,8 @@
 
     "aboutMe": {
         "title": "Let's work together",
-        "description": " I am a Front-end developer based in Munich, Germany. I enjoy helping designers and companies bring their ideas into real life.  I am looking forward to continuing my developer career with a job in a junior web developer position. If you think I'd be a good match for your projects, contact me!",
+        "description1": " I am a Front-end developer based in Munich, Germany. I enjoy helping designers and companies bring their ideas into real life.  I am looking forward to continuing my developer career with a job in a junior web developer position.",
+        "description2": "If you think I'd be a good match for your projects, contact me!",
         "button": "Send a message"
     },
 
